{
  "version": 4,
  "terraform_version": "1.0.4",
  "serial": 28,
  "lineage": "600c772e-3be9-798c-bcb9-e32670f822b1",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "Internet-Gateway-TC",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:198925565117:internet-gateway/igw-0eac65e465ff1cc83",
            "id": "igw-0eac65e465ff1cc83",
            "owner_id": "198925565117",
            "tags": {
              "Name": "Internet-Gateway-TC"
            },
            "tags_all": {
              "Name": "Internet-Gateway-TC"
            },
            "vpc_id": "vpc-0c9931e0dbab0440c"
          },
          "dependencies": [
            "aws_vpc.VPC-TC"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "Router-Table-TC",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:198925565117:route-table/rtb-02ebf898ba7879ec9",
            "id": "rtb-02ebf898ba7879ec9",
            "owner_id": "198925565117",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-0eac65e465ff1cc83",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "Router-Table-TC"
            },
            "tags_all": {
              "Name": "Router-Table-TC"
            },
            "vpc_id": "vpc-0c9931e0dbab0440c"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_internet_gateway.Internet-Gateway-TC",
            "aws_vpc.VPC-TC"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "Association1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0e259a4168411a7d3",
            "route_table_id": "rtb-02ebf898ba7879ec9",
            "subnet_id": "subnet-03ddf9f4735699e07"
          },
          "dependencies": [
            "aws_route_table.Router-Table-TC",
            "aws_subnet.Subnet-01",
            "aws_vpc.VPC-TC"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "Association2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-07038a69ada0b201c",
            "route_table_id": "rtb-02ebf898ba7879ec9",
            "subnet_id": "subnet-02750ae7b764a1447"
          },
          "dependencies": [
            "aws_route_table.Router-Table-TC",
            "aws_subnet.Subnet-02",
            "aws_vpc.VPC-TC"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "Security-Groups-TC",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:198925565117:security-group/sg-04b7f2e5d57c6a960",
            "description": "Managed by Terraform",
            "egress": [],
            "id": "sg-04b7f2e5d57c6a960",
            "ingress": [],
            "name": "terraform-20210814225523420400000002",
            "name_prefix": "terraform-",
            "owner_id": "198925565117",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "Security-Groups-TC"
            },
            "tags_all": {
              "Name": "Security-Groups-TC"
            },
            "timeouts": null,
            "vpc_id": "vpc-0c9931e0dbab0440c"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.VPC-TC"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "Subnet-01",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:198925565117:subnet/subnet-03ddf9f4735699e07",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-2a",
            "availability_zone_id": "use2-az1",
            "cidr_block": "10.1.0.0/24",
            "id": "subnet-03ddf9f4735699e07",
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "198925565117",
            "tags": {
              "Name": "Subnet-01"
            },
            "tags_all": {
              "Name": "Subnet-01"
            },
            "vpc_id": "vpc-0c9931e0dbab0440c"
          },
          "dependencies": [
            "aws_vpc.VPC-TC"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "Subnet-02",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:198925565117:subnet/subnet-02750ae7b764a1447",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-2a",
            "availability_zone_id": "use2-az1",
            "cidr_block": "10.1.1.0/24",
            "id": "subnet-02750ae7b764a1447",
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "198925565117",
            "tags": {
              "Name": "Subnet-02"
            },
            "tags_all": {
              "Name": "Subnet-02"
            },
            "vpc_id": "vpc-0c9931e0dbab0440c"
          },
          "dependencies": [
            "aws_vpc.VPC-TC"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "Subnet-03",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:198925565117:subnet/subnet-0308322abcb219fc5",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-2b",
            "availability_zone_id": "use2-az2",
            "cidr_block": "10.1.2.0/24",
            "id": "subnet-0308322abcb219fc5",
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "198925565117",
            "tags": {
              "Name": "Subnet-03"
            },
            "tags_all": {
              "Name": "Subnet-03"
            },
            "vpc_id": "vpc-0c9931e0dbab0440c"
          },
          "dependencies": [
            "aws_vpc.VPC-TC"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "Subnet-04",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:198925565117:subnet/subnet-07e6903c7e60e9d16",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-2b",
            "availability_zone_id": "use2-az2",
            "cidr_block": "10.1.3.0/24",
            "id": "subnet-07e6903c7e60e9d16",
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "198925565117",
            "tags": {
              "Name": "Subnet-04"
            },
            "tags_all": {
              "Name": "Subnet-04"
            },
            "vpc_id": "vpc-0c9931e0dbab0440c"
          },
          "dependencies": [
            "aws_vpc.VPC-TC"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "VPC-TC",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:198925565117:vpc/vpc-0c9931e0dbab0440c",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.1.0.0/16",
            "default_network_acl_id": "acl-0d979eeecb1c93589",
            "default_route_table_id": "rtb-00287f800e2516ec0",
            "default_security_group_id": "sg-0e2ff284c35621b88",
            "dhcp_options_id": "dopt-65e1a70e",
            "enable_dns_hostnames": false,
            "enable_dns_support": true,
            "id": "vpc-0c9931e0dbab0440c",
            "instance_tenancy": "default",
            "main_route_table_id": "rtb-00287f800e2516ec0",
            "owner_id": "198925565117",
            "tags": {
              "Name": "VPC-TC"
            },
            "tags_all": {
              "Name": "VPC-TC"
            }
          }
        }
      ]
    }
  ]
}